--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academia La Católica</title>
+    <title>Club Deportivo La Católica</title>
     <link rel="stylesheet" href="/styles/styles.css">
     <link rel="stylesheet" href="/styles/font.css">
     <link rel="stylesheet" href="/node_modules/animate.css/animate.min.css">
     <link rel="stylesheet" href="/node_modules/swiper/swiper-bundle.min.css">
 
-    <link rel="shortcut icon" href="/icons/LOGOCLC-azul.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon">
 </head>
 <body>
     <header class="relative">
@@ -47,9 +47,9 @@
                 </div>
             </div>
         </div>
-        <div id="nav_cabecera" class="fixed top-5 320px:top-0 820px:py-5 320px:py-3 left-0 z-30 w-full flex items-center justify-between px-24 1260px:px-24 820px:px-14 320px:px-4 820px:bg-transparent 320px:bg-white duration-300"> <!-- 820px:bg-transparent -->
-            <img class="1360px:w-20 820px:w-16 820px:inline-block 320px:hidden" src="/icons/ICONO-LOGO.png" alt="Logo de la Acadeémia La Católica">
-            <img class="820px:hidden 320px:inline-block 320px:w-16" src="/icons/ICONO-LOGO.png" alt="Icono de la Academia Católica">
+        <div id="nav_cabecera" class="fixed top-5 320px:top-0 820px:py-5 320px:py-3 left-0 z-30 w-full flex items-center justify-between px-24 1260px:px-24 820px:px-14 320px:px-4 820px:bg-transparent 320px:bg-white duration-300 320px:shadow-lg"> <!-- 820px:bg-transparent -->
+            <img class="1360px:w-48 820px:w-40 820px:inline-block 320px:hidden" src="/icons/CLC HORIZONTAL.png" alt="Logo de la Acadeémia La Católica">
+            <img class="820px:hidden 320px:inline-block 320px:w-32" src="/icons/CLC HORIZONTAL.png" alt="Icono de la Academia Católica">
             <img id="barra_menu" class="820px:hidden 320px:w-8" src="/icons/menu.png" alt="Icono de la barra del menú">
             <nav class="320px:hidden 820px:inline-block">
                 <img class="hidden" src="/icons/menu.png" alt="Icono de la barra del menú">
@@ -57,19 +57,19 @@
                     <li class="hidden">
                         <img src="/icons/equis.png" alt="">
                     </li>
-                    <a id="opcion_nav0" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                    <a id="opcion_nav0" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#">
                         <li class="">Inicio</li>
                     </a>
-                    <a id="opcion_nav1" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                    <a id="opcion_nav1" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#">
                         <li class="">Nosotros</li>
                     </a>
-                    <a id="opcion_nav2" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                    <a id="opcion_nav2" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#">
                         <li class="">Noticias</li>
                     </a>
-                    <a id="opcion_nav3" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                    <a id="opcion_nav3" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#">
                         <li class="">Talleres</li>
                     </a>
-                    <a id="opcion_nav4" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                    <a id="opcion_nav4" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#">
                         <li class="">Contáctanos</li>
                     </a>
                 </ul>
@@ -110,39 +110,60 @@
     </header>
 
     <main>
-        <section id="nosotros" class="320px:my-10 1100px:my-16 320px:mx-5">
-            <div>
-                <h2 class="320px:text-3xl 1100px:text-4xl 1400px:text-5xl 320px:font-bree_bold 320px:text-azul_catolica 320px:text-center 320px:mb-3">NOSOTROS</h2>
-                <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-15px 440px:w-96 540px:w-500px 700px:w-600px 440px:mx-auto 1400px:w-1200px 1400px:text-base">¡Bienvenido a nuestra academia La Católica! Ofrecemos clases de natación, teatro y ballet en un entorno inspirador y lleno de energía. Fomentamos el desarrollo personal y artístico de nuestros estudiantes, creando una comunidad apasionada que celebra el talento y la creatividad. Únete y descubre un lugar donde cada clase es una oportunidad para brillar. ¡Tu viaje comienza aquí!</p>
+        <section id="nosotros" class="320px:my-10 1100px:my-16 320px:mx-5 1100px:w-1000px 1260px:w-1200px 1260px:gap-3 1100px:mx-auto 1400px:w-1300px 1500px:w-1400px 1600px:w-1550px">
+            <div class="1100px:w-3/5 1100px:mx-auto">
+                <h2 class="320px:text-3xl 1100px:text-4xl 320px:font-bree_bold 320px:text-azul_catolica 320px:text-center 320px:mb-3">NOSOTROS</h2>
+                <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-15px 440px:w-96 540px:w-500px 700px:w-600px 1100px:w-full 440px:mx-auto 1600px:text-lg">¡Bienvenido a nuestra academia La Católica! Ofrecemos clases de natación, teatro y ballet en un entorno inspirador y lleno de energía. Fomentamos el desarrollo personal y artístico de nuestros estudiantes, creando una comunidad apasionada que celebra el talento y la creatividad. Únete y descubre un lugar donde cada clase es una oportunidad para brillar. ¡Tu viaje comienza aquí!</p>
             </div>
-            <div class="320px:my-5 1100px:my-10 440px:w-96 440px:mx-auto 540px:w-500px 700px:w-600px 900px:w-850px 1100px:w-1000px 1400px:w-1200px 1500px:w-1400px 1400px:mt-20">
-                <h3 class="320px:font-bree_bold 320px:text-azul_catolica 320px:mb-3 320px:text-xl 1100px:text-2xl 1400px:text-4xl 1400px:text-center">NUESTROS DOCENTES</h3>
-                <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:mb-6 1400px:text-base">Conoce a nuestro equipo de profesores, apasionados expertos en natación, teatro y ballet. Su dedicación inspira a cada estudiante a explorar y desarrollar su talento. ¡Prepárate para un viaje artístico emocionante!</p>
-                <div class="320px:flex 320px:flex-wrap 320px:gap-8 1100px:gap-20 1400px:gap-32 320px:justify-center 1400px:mt-10 1500px:mt-14">
-                    <div class="">
-                        <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
-                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Alexia.jpg" alt="Fotografia del docente de Natación">
+            <div class="320px:my-5 1100px:my-0 440px:w-96 440px:mx-auto 540px:w-500px 700px:w-600px 900px:w-850px 1100px:w-1000px 1100px:mt-10 1360px:mt-20 1360px:w-1300px">
+                <h3 class="320px:font-bree_bold 320px:text-azul_catolica 320px:mb-3 320px:text-lg 1100px:text-3xl 1400px:text-4xl 1100px:text-center 900px:text-center 900px:text-3xl">NUESTROS DOCENTES</h3>
+                <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:mb-6 1100px:text-15px 320px:text-center 1600px:text-lg 1100px:w-3/5 1100px:mx-auto">Conoce a nuestro equipo de profesores, apasionados expertos en natación, teatro y ballet. Su dedicación inspira a cada estudiante a explorar y desarrollar su talento. ¡Prepárate para un viaje artístico emocionante!</p>
+                <div id="slider_docentes" class="swiper">
+                    <div class="swiper-wrapper ">
+                        <div class="swiper-slide">
+                            <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
+                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Alexia.jpg" alt="Fotografia del docente de Natación">
+                            </div>
+                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Alexia Fernández</h4>
+                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesora de Natación</h4>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-52 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Ella es Alexia, maestra de natación con amplia experiencia. Su paciencia y enfoque personalizado crean un ambiente seguro que ayuda a los estudiantes a ganar confianza en el agua.</p>
                         </div>
-                        <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Alexia Fernández</h4>
-                        <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesora de Natación</h4>
-                        <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-64 1400px:w-80 320px:text-center 1400px:text-base">Ella es Alexia, maestra de natación con amplia experiencia. Su paciencia y enfoque personalizado crean un ambiente seguro que ayuda a los estudiantes a ganar confianza en el agua.</p>
-                    </div>
-                    <div class="">
-                        <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
-                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Sofia.jpg" alt="Fotografia del docente de Ballet">
+                        <div class="swiper-slide">
+                            <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
+                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Sofia.jpg" alt="Fotografia del docente de Ballet">
+                            </div>
+                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Sofía Quispe</h4>
+                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesora de Ballet</h4>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-52 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Conoce a Sofía, profesora de ballet apasionada. Su técnica inspira a los alumnos a desarrollar gracia y disciplina en un entorno motivador y acogedor.</p>
                         </div>
-                        <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Sofía Quispe</h4>
-                        <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesora de Ballet</h4>
-                        <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-64 1400px:w-80 320px:text-center 1400px:text-base">Conoce a Sofía, profesora de ballet apasionada. Su técnica inspira a los alumnos a desarrollar gracia y disciplina en un entorno motivador y acogedor.</p>
-                    </div>
-                    <div class="">
-                        <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
-                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Martin.jpg" alt="Fotografia del docente de Teatro">
+                        <div class="swiper-slide">
+                            <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
+                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Martin.jpg" alt="Fotografia del docente de Teatro">
+                            </div>
+                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Martín Flores</h4>
+                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Teatro</h4>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-52 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Te presentamos a Martín, profesor de teatro lleno de energía. Fomenta la creatividad y la expresión, creando un espacio seguro donde los estudiantes pueden experimentar y crecer.</p>
                         </div>
-                        <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Martín Flores</h4>
-                        <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Teatro</h4>
-                        <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-64 1400px:w-80 320px:text-center 1400px:text-base">Te presentamos a Martín, profesor de teatro lleno de energía. Fomenta la creatividad y la expresión, creando un espacio seguro donde los estudiantes pueden experimentar y crecer.</p>
+                        <div class="swiper-slide">
+                            <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
+                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Martin.jpg" alt="Fotografia del docente de Teatro">
+                            </div>
+                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Martín Flores</h4>
+                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Teatro</h4>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-52 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Te presentamos a Martín, profesor de teatro lleno de energía. Fomenta la creatividad y la expresión, creando un espacio seguro donde los estudiantes pueden experimentar y crecer.</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
+                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Martin.jpg" alt="Fotografia del docente de Teatro">
+                            </div>
+                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Martín Flores</h4>
+                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Teatro</h4>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-52 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Te presentamos a Martín, profesor de teatro lleno de energía. Fomenta la creatividad y la expresión, creando un espacio seguro donde los estudiantes pueden experimentar y crecer.</p>
+                        </div>
                     </div>
+
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
             </div>
         </section>
