--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
         <div id="sliders" class="swiper 1360px:h-screen 940px:h-723px 320px:h-550px relative">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img class="w-full h-full object-cover" src="/images/natacion-slider.jpg" alt="Slider relacionado a la natación">
+                    <img class="w-full h-full object-cover" src="/images/slider_catolica_1.jpg" alt="Slider relacionado a la natación">
                     <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
-                        <h1 class="font-helvetic 1360px:text-8xl 940px:text-7xl 940px:mb-8 320px:text-4xl 940px:mt-0">NATACIÓN</h1>
-                        <h2 class="font-bree_bold 1360px:text-5xl 940px:text-4xl 320px:text-3xl text-azul_catolica 320px:mt-10">¡Sumérgete en la diversión!</h2>
-                        <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">Vive una experiencia alegre y emocionante mientras aprendes a nadar. Las clases están diseñadas para combinar el aprendizaje con la diversión en cada sesión</p>
-                        <button class="bg-azul_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-azul_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs">CONTÁCTANOS</button>
+                        <h1 class="1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 text-azul_catolica font-bree_bold">NATACIÓN</h1>
+                        <h2 class="font-bree_bold 1360px:text-4xl 940px:text-3xl 320px:text-xl">¡Sumérgete en la diversión!</h2>
+                        <!-- <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">Vive una experiencia alegre y emocionante mientras aprendes a nadar. Las clases están diseñadas para combinar el aprendizaje con la diversión en cada sesión</p> -->
+                        <button class="bg-azul_catolica px-10 py-1 rounded-md 320px:mt-4 font-bree_regular outline outline-1 outline-azul_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs 1360px:mt-10">CONTÁCTANOS</button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <img class="w-full h-full object-cover" src="/images/ballet-slider.jpg" alt="Slider relacionado al ballet">
                     <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
-                        <h1 class="font-helvetic 1360px:text-8xl 940px:text-7xl 940px:mb-8 320px:text-4xl 940px:mt-0">BALLET</h1>
-                        <h2 class="font-bree_bold 1360px:text-5xl 940px:text-4xl 320px:text-3xl text-amarillo_catolica 320px:mt-10">Haz de cada movimiento una obra maestra</h2>
-                        <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">En el ballet, perfecciona cada paso y técnica para transformar cada movimiento en una expresión artística única y elegante, elevando tu danza a un nivel superior.</p>
-                        <button class="bg-amarillo_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-amarillo_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs">CONTÁCTANOS</button>
+                        <h1 class="font-bree_bold 1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 text-amarillo_catolica">BALLET</h1>
+                        <h2 class="font-bree_bold 1360px:text-4xl 940px:text-3xl 320px:text-xl">Haz de cada movimiento una obra maestra</h2>
+                        <!-- <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">En el ballet, perfecciona cada paso y técnica para transformar cada movimiento en una expresión artística única y elegante, elevando tu danza a un nivel superior.</p> -->
+                        <button class="bg-amarillo_catolica px-10 py-1 rounded-md 320px:mt-4 font-bree_regular outline outline-1 outline-amarillo_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs 1360px:mt-10">CONTÁCTANOS</button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <img class="w-full h-full object-cover" src="/images/teatro_niños_1.jpg" alt="Slider relacionado al teatro">
                     <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
-                        <h1 class="font-helvetic 1360px:text-8xl 940px:text-7xl 940px:mb-8 320px:text-4xl 940px:mt-0">TEATRO</h1>
-                        <h2 class="font-bree_bold 1360px:text-5xl 940px:text-4xl 320px:text-3xl text-verde_catolica 320px:mt-10">Haz del escenario tu lugar de expresión</h2>
-                        <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">En el teatro, convierte el escenario en tu espacio personal para expresar emociones y creatividad, mostrando tu verdadero talento y capturando la esencia de cada papel</p>
-                        <button class="bg-verde_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-verde_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs">CONTÁCTANOS</button>
+                        <h1 class="font-bree_bold 1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 text-verde_catolica">TEATRO</h1>
+                        <h2 class="font-bree_bold 1360px:text-4xl 940px:text-3xl 320px:text-xl">Haz del escenario tu lugar de expresión</h2>
+                        <!-- <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">En el teatro, convierte el escenario en tu espacio personal para expresar emociones y creatividad, mostrando tu verdadero talento y capturando la esencia de cada papel</p> -->
+                        <button class="bg-verde_catolica px-10 py-1 rounded-md 320px:mt-4 font-bree_regular outline outline-1 outline-verde_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs 1360px:mt-10">CONTÁCTANOS</button>
                     </div>
                 </div>
             </div>
@@ -115,18 +115,26 @@
                 <h2 class="320px:text-3xl 1100px:text-4xl 320px:font-bree_bold 320px:text-azul_catolica 320px:text-center 320px:mb-3">NOSOTROS</h2>
                 <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-15px 440px:w-96 540px:w-500px 700px:w-600px 1100px:w-full 440px:mx-auto 1600px:text-lg">¡Bienvenido a nuestra academia La Católica! Ofrecemos clases de natación, teatro y ballet en un entorno inspirador y lleno de energía. Fomentamos el desarrollo personal y artístico de nuestros estudiantes, creando una comunidad apasionada que celebra el talento y la creatividad. Únete y descubre un lugar donde cada clase es una oportunidad para brillar. ¡Tu viaje comienza aquí!</p>
             </div>
-            <div class="320px:my-5 1100px:my-0 440px:w-96 440px:mx-auto 540px:w-500px 700px:w-600px 900px:w-850px 1100px:w-1000px 1100px:mt-10 1360px:mt-20 1360px:w-1300px">
-                <h3 class="320px:font-bree_bold 320px:text-azul_catolica 320px:mb-3 320px:text-lg 1100px:text-3xl 1400px:text-4xl 1100px:text-center 900px:text-center 900px:text-3xl">NUESTROS DOCENTES</h3>
+            <div class="320px:my-5 1100px:my-0 440px:w-96 440px:mx-auto 540px:w-500px 700px:w-600px 900px:w-850px 1100px:w-1000px 1100px:mt-10 1360px:mt-20 1360px:w-1100px 1500px:w-1200px">
+                <h3 class="320px:font-bree_bold 320px:text-azul_catolica 320px:mb-3 320px:text-2xl 1100px:text-3xl 1400px:text-4xl 1100px:text-center 320px:text-center 900px:text-3xl">NUESTROS DOCENTES</h3>
                 <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:mb-6 1100px:text-15px 320px:text-center 1600px:text-lg 1100px:w-3/5 1100px:mx-auto">Conoce a nuestro equipo de profesores, apasionados expertos en natación, teatro y ballet. Su dedicación inspira a cada estudiante a explorar y desarrollar su talento. ¡Prepárate para un viaje artístico emocionante!</p>
                 <div id="slider_docentes" class="swiper">
                     <div class="swiper-wrapper ">
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
-                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Alexia.jpg" alt="Fotografia del docente de Natación">
+                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/foto_prof_jesus_natacion.jpg" alt="Fotografia del docente de Natación">
                             </div>
-                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Alexia Fernández</h4>
-                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesora de Natación</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-52 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Ella es Alexia, maestra de natación con amplia experiencia. Su paciencia y enfoque personalizado crean un ambiente seguro que ayuda a los estudiantes a ganar confianza en el agua.</p>
+                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Jesús de la Cruz</h4>
+                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Natación</h4>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-52 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Maestro de natación con amplia experiencia. Su paciencia y enfoque personalizado crean un ambiente seguro que ayuda a los estudiantes a ganar confianza en el agua.</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
+                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/prof_natacion_2.jpg" alt="Fotografia del docente de Natación">
+                            </div>
+                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Jesús de la Cruz</h4>
+                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Natación</h4>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-52 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Maestro de natación con amplia experiencia. Su paciencia y enfoque personalizado crean un ambiente seguro que ayuda a los estudiantes a ganar confianza en el agua.</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
@@ -135,14 +143,6 @@
                             <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Sofía Quispe</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesora de Ballet</h4>
                             <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-52 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Conoce a Sofía, profesora de ballet apasionada. Su técnica inspira a los alumnos a desarrollar gracia y disciplina en un entorno motivador y acogedor.</p>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
-                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Martin.jpg" alt="Fotografia del docente de Teatro">
-                            </div>
-                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Martín Flores</h4>
-                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Teatro</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-52 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Te presentamos a Martín, profesor de teatro lleno de energía. Fomenta la creatividad y la expresión, creando un espacio seguro donde los estudiantes pueden experimentar y crecer.</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
